EFORM-1305 Libellés des communues à corriger + adaptation au nouveau XML de l'OFS